src/core-crm/objects/Nurture_Track_Configuration__c/Nurture_Track_Configuration__c.object-meta.xml
<CustomObject>
    <label>Nurture Track Configuration</label>
    <nameField>
        <displayFormat>NTC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nurture Track Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>