src/core-crm/objects/Nurture_Track_Configuration__c/fields/Cadence_Name__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Name__c</fullName>
    <description>The Name of the Cadence the Configuration is for</description>
    <label>Cadence Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>