src/core-crm/objects/Nurture_Track_Configuration__c/fields/Criteria_Type__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Type__c</fullName>
    <description>Denotes if the criteria is for entry or exit</description>
    <label>Criteria Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entry</fullName>
            </value>
            <value>
                <fullName>Exit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>