src/core-crm/objects/Nurture_Track_Configuration__c/fields/Date_Offset_Type__c.field-meta.xml
<CustomField>
    <fullName>Date_Offset_Type__c</fullName>
    <description>Whether the offset is for before or after key date</description>
    <label>Date Offset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before</fullName>
            </value>
            <value>
                <fullName>After</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>