src/core-crm/objects/Nurture_Track_Configuration__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A description of the cadence purpose, activity, entry and exit criteria</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>