src/core-crm/objects/Nurture_Track_Configuration__c/fields/Enquiry_Category_L1__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Category_L1__c</fullName>
    <description>The level 1 enquiry categories selected for inclusion in cadence entry/exit criteria</description>
    <label>Enquiry Category L1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entry requirements &amp; study pathways</fullName>
            </value>
            <value>
                <fullName>Course information</fullName>
            </value>
            <value>
                <fullName>Applying for a course</fullName>
            </value>
            <value>
                <fullName>My application and offer</fullName>
            </value>
            <value>
                <fullName>My enrolment</fullName>
            </value>
            <value>
                <fullName>Fees, costs and scholarships</fullName>
            </value>
            <value>
                <fullName>Student life</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>