src/core-crm/objects/Nurture_Track_Configuration__c/fields/Key_Date_Name__c.field-meta.xml
<CustomField>
    <fullName>Key_Date_Name__c</fullName>
    <description>The Name of the Key date used to offset by

Note that key date is baked into the logic of the track and is not changeable this filed is purely for context</description>
    <label>Key Date Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>