src/core-crm/objects/Nurture_Track_Configuration__c/fields/Key_Date_Offset_Days__c.field-meta.xml
<CustomField>
    <fullName>Key_Date_Offset_Days__c</fullName>
    <description>The number days to offset from key dates, e.g., 4 days after Offer Date or 14 days before Class Reg Start Date</description>
    <label>Key Date Offset Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>