src/core-crm/objects/Nurture_Track_Configuration__c/fields/Lead_Score_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_Threshold__c</fullName>
    <description>The Lead Score Threshold for inclusion in the Track

Note: This value needs to be replicated to all cadences in the track</description>
    <label>Lead Score Threshold</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>