src/core-crm/objects/Nurture_Track_Configuration__c/fields/Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>Migration_ID__c</fullName>
    <externalId>true</externalId>
    <label>Migration ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>