src/core-crm/objects/Nurture_Track_Configuration__c/fields/Migration_Key__c.field-meta.xml
<CustomField>
    <fullName>Migration_Key__c</fullName>
    <externalId>true</externalId>
    <label>Migration Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>