src/core-crm/objects/Nurture_Track_Configuration__c/fields/Nurture_Track_Name__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Track_Name__c</fullName>
    <description>The Name of the Track the Cadence belongs to</description>
    <label>Nurture Track Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>