src/core-crm/objects/Nurture_Track_Configuration__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <description>The execution of order of Cadence to provide context for configuration</description>
    <label>Sequence Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>