src/core-crm/objects/Nurture_Track_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cadence_Name__c</columns>
    <columns>Criteria_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Future_Student_Super_User_Domestic</role>
        <role>Future_Student_Super_User_International</role>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>